Make it look like RuneLite, hide external manager, resources, change hosting location

--- a/runelite-client/src/main/resources/net/runelite/client/runelite.properties
+++ b/runelite-client/src/main/resources/net/runelite/client/runelite.properties
@@ -1,8 +1,8 @@
-runelite.title=OpenOSRS
+runelite.title=RuneLite
 runelite.version=@project.version@
 runescape.version=@rs.version@
-runelite.discord.appid=627741263881568257
-runelite.discord.invite=https://discord.gg/r287wN6bkc
+runelite.discord.appid=409416265891971072
+runelite.discord.invite=https://discord.gg/mZvA6My
 runelite.github.link=https://github.com/open-osrs
 runelite.wiki.link=https://github.com/open-osrs/runelite/wiki
 runelite.patreon.link=https://www.patreon.com/openosrs
